# sysmel-beta

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
apps/: CMakeLists.txt
apps/compiler/: CMakeLists.txt  Compiler.cpp  Interpreter.cpp
libs/: CMakeLists.txt
libs/BaseCompiler/: CMakeLists.txt  DOM.cpp  SObjectSchemaCompilerDriver.cpp  SObjectSchemaParser.cpp  SObjectSchemaSemanticAnalyzer.cpp
libs/BaseCompiler/Sysmel/: Parser.cpp  Scanner.cpp
libs/BootstrapEnvironment/: ASTArgumentDefinitionNode.cpp  ASTBuilder.cpp  ASTCleanUpScopeNode.cpp  ASTClosureNode.cpp  ASTIdentifierReferenceNode.cpp  ASTLexicalScopeNode.cpp  ASTLiteralValueNode.cpp  ASTMakeAssociationNode.cpp  ASTMessageChainMessageNode.cpp  ASTMessageChainNode.cpp  ASTMessageSendNode.cpp  ASTNode.cpp  ASTParseErrorNode.cpp  ASTPragmaNode.cpp  ASTQuasiQuoteNode.cpp  ASTQuasiUnquoteNode.cpp  ASTQuoteNode.cpp  ASTSequenceNode.cpp  ASTSourceCode.cpp  ASTSourceCodePosition.cpp  ASTSpliceNode.cpp  AnyValue.cpp  BootstrapTypeRegistration.cpp  CMakeLists.txt  LanguageSupport.cpp  LiteralArray.cpp  LiteralBooleanFalse.cpp  LiteralBooleanTrue.cpp  LiteralCharacter.cpp  LiteralFloat.cpp  LiteralFraction.cpp  LiteralInteger.cpp  LiteralNegativeInteger.cpp  LiteralPositiveInteger.cpp  LiteralString.cpp  LiteralSymbol.cpp  LiteralUndefined.cpp  LiteralValue.cpp  LiteralVoid.cpp  MacroInvocationContext.cpp  (+7 more)
libs/ObjectModel/: ASTArgumentDefinitionNode.cpp  ASTBuilder.cpp  ASTCleanUpScopeNode.cpp  ASTClosureNode.cpp  ASTIdentifierReferenceNode.cpp  ASTIntrinsicOperationNode.cpp  ASTLexicalScopeNode.cpp  ASTLiteralValueNode.cpp  ASTMessageChainMessageNode.cpp  ASTMessageChainNode.cpp  ASTMessageSendNode.cpp  ASTNode.cpp  ASTParseErrorNode.cpp  ASTPragmaNode.cpp  ASTQuasiQuoteNode.cpp  ASTQuasiUnquoteNode.cpp  ASTQuoteNode.cpp  ASTSequenceNode.cpp  ASTSourceCode.cpp  ASTSourceCodePosition.cpp  ASTSourcePosition.cpp  ASTSpliceNode.cpp  AnyValue.cpp  BootstrapExtensionMethods.cpp  BootstrapMethod.cpp  BootstrapModule.cpp  BootstrapType.cpp  BootstrapTypeRegistration.cpp  CMakeLists.txt  CompilationTarget.cpp  CompilerObject.cpp  Fraction.cpp  LanguageSupport.cpp  LargeInteger.cpp  LiteralArray.cpp  LiteralBoolean.cpp  LiteralBooleanFalse.cpp  LiteralBooleanTrue.cpp  LiteralCharacter.cpp  LiteralFloat.cpp  (+27 more)
libs/SysmelCompiler/: CMakeLists.txt
libs/SysmelCompiler/Backend/LLVM/: LLVMDebugTypeVisitor.cpp  LLVMLiteralValueVisitor.cpp  LLVMTypeVisitor.cpp  SSALLVMCodeGenerationBackend.cpp  SSALLVMDebugValueVisitor.cpp  SSALLVMModuleVisitor.cpp  SSALLVMValueVisitor.cpp
libs/SysmelCompiler/BootstrapEnvironment/: ASTAnalysisEnvironment.cpp  ASTArgumentDefinitionNode.cpp  ASTBreakNode.cpp  ASTBuilder.cpp  ASTCallNode.cpp  ASTCastNode.cpp  ASTClassNode.cpp  ASTCleanUpScopeNode.cpp  ASTClosureNode.cpp  ASTCompileTimeConstantNode.cpp  ASTCompileTimeEvaluationErrorNode.cpp  ASTCompileTimeEvaluator.cpp  ASTContinueNode.cpp  ASTDoWhileNode.cpp  ASTDowncastTypeConversionNode.cpp  ASTEmptySourcePosition.cpp  ASTEnumNode.cpp  ASTErrorNode.cpp  ASTExplicitCastNode.cpp  ASTFieldVariableAccessNode.cpp  ASTFieldVariableNode.cpp  ASTFunctionNode.cpp  ASTFunctionalNode.cpp  ASTGlobalVariableNode.cpp  ASTIdentifierReferenceNode.cpp  ASTIfNode.cpp  ASTImplicitCastNode.cpp  ASTIntrinsicOperationNode.cpp  ASTLexicalScopeNode.cpp  ASTLiteralValueNode.cpp  ASTLocalImmutableAccessNode.cpp  ASTLocalVariableNode.cpp  ASTMakeAssociationNode.cpp  ASTMakeDictionaryNode.cpp  ASTMakeLiteralArrayNode.cpp  ASTMakeTupleNode.cpp  ASTMessageChainMessageNode.cpp  ASTMessageChainNode.cpp  ASTMessageSendNode.cpp  ASTMethodNode.cpp  (+236 more)
libs/SysmelCompiler/Compiler/Sysmel/: Scanner.cpp  SysmelLanguageSupport.cpp
libs/SysmelCompiler/Environment/: ASTAlternativesPatternNode.cpp  ASTAnalysisEnvironment.cpp  ASTAnyValuePatternNode.cpp  ASTArgumentDefinitionNode.cpp  ASTBindingPatternNode.cpp  ASTBreakNode.cpp  ASTBuilder.cpp  ASTCallNode.cpp  ASTCastNode.cpp  ASTClassNode.cpp  ASTCleanUpScopeNode.cpp  ASTClosureNode.cpp  ASTCompileTimeConstantNode.cpp  ASTCompileTimeEvaluationErrorNode.cpp  ASTCompileTimeEvaluator.cpp  ASTContinueNode.cpp  ASTDestructuringBindingNode.cpp  ASTDoWhileNode.cpp  ASTDowncastTypeConversionNode.cpp  ASTEmptySourcePosition.cpp  ASTEnumNode.cpp  ASTErrorNode.cpp  ASTEvaluatePatternWithValueNode.cpp  ASTExplicitCastNode.cpp  ASTFailPatternNode.cpp  ASTFieldVariableAccessNode.cpp  ASTFieldVariableNode.cpp  ASTFunctionNode.cpp  ASTFunctionalNode.cpp  ASTGlobalVariableNode.cpp  ASTIdentifierReferenceNode.cpp  ASTIfNode.cpp  ASTImplicitCastNode.cpp  ASTLexicalScopeNode.cpp  ASTLiteralValueNode.cpp  ASTLocalImmutableAccessNode.cpp  ASTLocalVariableNode.cpp  ASTMakeAggregateNode.cpp  ASTMakeAssociationNode.cpp  ASTMakeDictionaryNode.cpp  (+295 more)
libs/SysmelCompiler/Frontend/SysmelSyntax/: Parser.cpp  Scanner.cpp  SysmelLanguageSupport.cpp
scripts/: buildLLVM.bat  buildLLVM.ps1  buildLLVM.sh  downloadLLVM.ps1  downloadLLVM.sh
tests/: CMakeLists.txt
tests/BootstrapEnvironment/: BootstrapModule.cpp  CMakeLists.txt  Type.cpp
tests/LLVM/: Aggregates.sysmel  BasicMacros.sysmel  CMakeLists.txt  HelloWorld.sysmel  Polymorphism.sysmel  PrimitiveScalars.sysmel  PrimitiveVectors.sysmel  Printf.sysmel  TestHelper.c  UnitTesting.sysmel
tests/ObjectModel/: BootstrapModule.cpp  CMakeLists.txt  LargeInteger.cpp  LiteralNumber.cpp  SObjectSchemaTests.cpp  Type.cpp  Wrappers.cpp
tests/SysmelCompiler/: CMakeLists.txt
tests/SysmelCompiler/BootstrapEnvironment/: BootstrapModule.cpp  LargeInteger.cpp  LiteralNumber.cpp  StringUtilities.cpp  Type.cpp  Wrappers.cpp
tests/SysmelCompiler/Compiler/: EvaluationTests.cpp  ParserTests.cpp  ScannerTests.cpp
tests/SysmelCompiler/Environment/: BootstrapModule.cpp  LargeInteger.cpp  LiteralNumber.cpp  StringUtilities.cpp  Type.cpp  Wrappers.cpp
tests/SysmelCompiler/Frontend/: EvaluationTests.cpp  ItaniumNameManglerTests.cpp  ParserTests.cpp  PatternNodeTests.cpp  SSATests.cpp  ScannerTests.cpp
tests/compiler/: CMakeLists.txt  DOMTests.cpp  ParserTests.cpp  ScannerTests.cpp
(+761 files in other folders)
