set(BootstrapEnvironment_Sources
    LargeInteger.cpp
    AnyValue.cpp
    ASTArgumentDefinitionNode.cpp
    ASTBuilder.cpp
    ASTCleanUpScopeNode.cpp
    ASTClosureNode.cpp
    ASTEmptySourcePosition.cpp
    ASTIdentifierReferenceNode.cpp
    ASTIntrinsicOperationNode.cpp
    ASTLexicalScopeNode.cpp
    ASTLiteralValueNode.cpp
    ASTMakeAssociationNode.cpp
    ASTMakeDictionaryNode.cpp
    ASTMakeLiteralArrayNode.cpp
    ASTMakeTupleNode.cpp
    ASTMessageChainMessageNode.cpp
    ASTMessageChainNode.cpp
    ASTMessageSendNode.cpp
    ASTNode.cpp
    ASTParseErrorNode.cpp
    ASTPragmaNode.cpp
    ASTQuasiQuoteNode.cpp
    ASTQuasiUnquoteNode.cpp
    ASTQuoteNode.cpp
    ASTSequenceNode.cpp
    ASTSourceCode.cpp
    ASTSourceCodePosition.cpp
    ASTSourcePosition.cpp
    ASTSpliceNode.cpp
    BootstrapExtensionMethods.cpp
    BootstrapMethod.cpp
    BootstrapModule.cpp
    BootstrapType.cpp
    BootstrapTypeRegistration.cpp
    CompilerObject.cpp
    Fraction.cpp
    LanguageSupport.cpp
    LiteralArray.cpp
    LiteralBoolean.cpp
    LiteralBooleanTrue.cpp
    LiteralBooleanFalse.cpp
    LiteralInteger.cpp
    LiteralNegativeInteger.cpp
    LiteralNumber.cpp
    LiteralFloat.cpp
    LiteralFraction.cpp
    LiteralPositiveInteger.cpp
    LiteralCharacter.cpp
    LiteralString.cpp
    LiteralSymbol.cpp
    LiteralUndefined.cpp
    LiteralValue.cpp
    LiteralVoid.cpp
    MacroInvocationContext.cpp
    MetaType.cpp
    Method.cpp
    MethodDictionary.cpp
    Module.cpp
    ModuleReference.cpp
    PatternMatchingMethod.cpp
    ProgramEntity.cpp
    RuntimeContext.cpp
    SExpression.cpp
    SpecificMethod.cpp
    StringUtilities.cpp
    TranslationUnitModule.cpp
    Type.cpp
    Wrappers.cpp
)

add_library(SysmelBootstrapEnvironment SHARED ${BootstrapEnvironment_Sources})
