set(ObjectModel_Sources
    LargeInteger.cpp
    AnyValue.cpp
    BootstrapMethod.cpp
    BootstrapModule.cpp
    BootstrapType.cpp
    BootstrapTypeRegistration.cpp
    Fraction.cpp
    LiteralInteger.cpp
    LiteralNegativeInteger.cpp
    LiteralNumber.cpp
    LiteralFloat.cpp
    LiteralFraction.cpp
    LiteralPositiveInteger.cpp
    LiteralCharacter.cpp
    LiteralValue.cpp
    LiteralString.cpp
    LiteralSymbol.cpp
    Method.cpp
    Module.cpp
    ModuleReference.cpp
    PatternMatchingMethod.cpp
    ProgramEntity.cpp
    RuntimeContext.cpp
    SpecificMethod.cpp
    TranslationUnitModule.cpp
    Type.cpp
    Wrappers.cpp
)

add_library(SysmelObjectModel SHARED ${ObjectModel_Sources})
