set(ObjectModel_Sources
    LargeInteger.cpp
    AnyValue.cpp
    ASTBuilder.cpp
    ASTCleanUpScopeNode.cpp
    ASTClosureNode.cpp
    ASTIdentifierReferenceNode.cpp
    ASTIntrinsicOperationNode.cpp
    ASTLexicalScopeNode.cpp
    ASTLiteralValueNode.cpp
    ASTMessageSendNode.cpp
    ASTNode.cpp
    ASTSequenceNode.cpp
    BootstrapExtensionMethods.cpp
    BootstrapMethod.cpp
    BootstrapModule.cpp
    BootstrapType.cpp
    BootstrapTypeRegistration.cpp
    CompilerObject.cpp
    Fraction.cpp
    LiteralInteger.cpp
    LiteralNegativeInteger.cpp
    LiteralNumber.cpp
    LiteralFloat.cpp
    LiteralFraction.cpp
    LiteralPositiveInteger.cpp
    LiteralCharacter.cpp
    LiteralValue.cpp
    LiteralString.cpp
    LiteralSymbol.cpp
    MacroInvocationContext.cpp
    MetaType.cpp
    Method.cpp
    MethodDictionary.cpp
    Module.cpp
    ModuleReference.cpp
    PatternMatchingMethod.cpp
    ProgramEntity.cpp
    RuntimeContext.cpp
    SpecificMethod.cpp
    TranslationUnitModule.cpp
    Type.cpp
    Wrappers.cpp
)

add_library(SysmelObjectModel SHARED ${ObjectModel_Sources})
