set(BootstrapEnvironment_Sources
    AggregateType.cpp
    AggregateTypeWithFields.cpp
    AmbiguousMatchingPatternsFound.cpp
    ArgumentCountError.cpp
    ArgumentVariable.cpp
    ArithmeticError.cpp
    AnyValue.cpp
    ASTAnalysisEnvironment.cpp
    ASTArgumentDefinitionNode.cpp
    ASTBuilder.cpp
    ASTCallNode.cpp
    ASTClassNode.cpp
    ASTCleanUpScopeNode.cpp
    ASTClosureNode.cpp
    ASTCompileTimeEvaluationErrorNode.cpp
    ASTCompileTimeEvaluator.cpp
    ASTDowncastTypeConversionNode.cpp
    ASTEmptySourcePosition.cpp
    ASTEnumNode.cpp
    ASTErrorNode.cpp
    ASTFieldVariableNode.cpp
    ASTFunctionalNode.cpp
    ASTFunctionNode.cpp
    ASTGlobalVariableNode.cpp
    ASTIdentifierReferenceNode.cpp
    ASTLexicalScopeNode.cpp
    ASTLiteralValueNode.cpp
    ASTLocalImmutableAccessNode.cpp
    ASTLocalVariableNode.cpp
    ASTMakeAssociationNode.cpp
    ASTMakeDictionaryNode.cpp
    ASTMakeLiteralArrayNode.cpp
    ASTMakeTupleNode.cpp
    ASTMessageChainMessageNode.cpp
    ASTMessageChainNode.cpp
    ASTMessageSendNode.cpp
    ASTMethodNode.cpp
    ASTNamespace.cpp
    ASTNode.cpp
    ASTParseErrorNode.cpp
    ASTParseErrorValidator.cpp
    ASTPragmaNode.cpp
    ASTProgramEntityExtensionNode.cpp
    ASTProgramEntityNode.cpp
    ASTQuasiQuoteNode.cpp
    ASTQuasiUnquoteNode.cpp
    ASTQuoteNode.cpp
    ASTSemanticAnalyzer.cpp
    ASTSemanticErrorNode.cpp
    ASTSequenceNode.cpp
    ASTSourceCode.cpp
    ASTSourceCodePosition.cpp
    ASTSourcePosition.cpp
    ASTSpliceNode.cpp
    ASTStructNode.cpp
    ASTTypeConversionNode.cpp
    ASTTypeNode.cpp
    ASTUnionNode.cpp
    ASTUpcastTypeConversionNode.cpp
    ASTValueAsVoidTypeConversionNode.cpp
    ASTVariableAccessNode.cpp
    ASTVariableNode.cpp
    ASTVisitor.cpp
    Auto.cpp
    BootstrapExtensionMethods.cpp
    BootstrapMethod.cpp
    BootstrapModule.cpp
    BootstrapType.cpp
    BootstrapTypeRegistration.cpp
    CannotEvaluateMessage.cpp
    CannotEvaluateMessageInCompileTime.cpp
    CannotEvaluateUndefinedMessage.cpp
    CannotOverloadPatternMatchingMethod.cpp
    CannotUnwrap.cpp
    ClassMetaBuilder.cpp
    ClassType.cpp
    CleanUpScope.cpp
    ClosureType.cpp
    CompilationError.cpp
    CompilationErrors.cpp
    CompilationErrorValue.cpp
    CompiledMethod.cpp
    CompileTimeCleanUpScope.cpp
    CompileTimeEvaluationError.cpp
    DeferredCompileTimeCodeFragment.cpp
    DerivedType.cpp
    CompilerObject.cpp
    DivisionByZeroError.cpp
    DomainError.cpp
    DowncastTypeConversionRule.cpp
    EnumMetaBuilder.cpp
    EnumType.cpp
    Error.cpp
    Exception.cpp
    ExpectedTypeSetInferenceSlot.cpp
    FieldMetaBuilder.cpp
    FieldVariable.cpp
    Fraction.cpp
    FunctionType.cpp
    FunctionalType.cpp
    FunctionMetaBuilder.cpp
    GlobalMetaBuilder.cpp
    GlobalVariable.cpp
    IdentifierLookupScope.cpp
    IdentityTypeConversionRule.cpp
    InternalMetaBuilder.cpp
    LanguageSupport.cpp
    LargeInteger.cpp
    LexicalScope.cpp
    LetMetaBuilder.cpp
    LiteralArray.cpp
    LiteralBoolean.cpp
    LiteralBooleanTrue.cpp
    LiteralBooleanFalse.cpp
    LiteralInteger.cpp
    LiteralNegativeInteger.cpp
    LiteralNumber.cpp
    LiteralFloat.cpp
    LiteralFraction.cpp
    LiteralPositiveInteger.cpp
    LiteralCharacter.cpp
    LiteralString.cpp
    LiteralSymbol.cpp
    LiteralToTargetTypeConversionRule.cpp
    LiteralValue.cpp
    LocalVariable.cpp
    MacroInvocationContext.cpp
    MessageChainReceiverName.cpp
    MessageNotUnderstood.cpp
    MetaBuilder.cpp
    MetaBuilderInstanceContext.cpp
    MetaType.cpp
    Method.cpp
    MethodType.cpp
    MethodDictionary.cpp
    MethodMetaBuilder.cpp
    Module.cpp
    ModuleDefinedProgramEntity.cpp
    ModuleReference.cpp
    NamedProgramEntityMetaBuilder.cpp
    Namespace.cpp
    NamespaceMetaBuilder.cpp
    NotMatchingPatternFound.cpp
    ParseError.cpp
    PatternMatchingMethod.cpp
    Pragma.cpp
    PrimitiveBooleanType.cpp
    PrimitiveCharacterType.cpp
    PrimitiveFloatType.cpp
    PrimitiveIntegerType.cpp
    PrimitiveNumberType.cpp
    PrimitiveScalarType.cpp
    PrimitiveTensorType.cpp
    PrimitiveType.cpp
    PrivateMetaBuilder.cpp
    ProgramEntity.cpp
    ProgramEntityScope.cpp
    ProgramModule.cpp
    ProtectedMetaBuilder.cpp
    PublicMetaBuilder.cpp
    ResultTypeInferenceSlot.cpp
    ReturnType.cpp
    RuntimeContext.cpp
    ScriptModule.cpp
    SemanticError.cpp
    SExpression.cpp
    SimpleType.cpp
    SpecificMethod.cpp
    StringUtilities.cpp
    StructMetaBuilder.cpp
    StructureType.cpp
    SubclassResponsibility.cpp
    ResultTypeInferenceSlot.cpp
    Type.cpp
    TypeConversionRule.cpp
    TypeMetaBuilder.cpp
    Undefined.cpp
    UnsupportedOperation.cpp
    UpcastTypeConversionRule.cpp
    UnionMetaBuilder.cpp
    UnionType.cpp
    ValueBox.cpp
    ValueAsVoidTypeConversionRule.cpp
    Variable.cpp
    VariableMetaBuilder.cpp
    VisibilityMetaBuilder.cpp
    Void.cpp
    Wrappers.cpp
)

list(TRANSFORM BootstrapEnvironment_Sources PREPEND "BootstrapEnvironment/")

set(Parser_Sources
    Scanner.cpp
    Parser.cpp
    SysmelLanguageSupport.cpp
)

list(TRANSFORM Parser_Sources PREPEND "Compiler/Sysmel/")

add_library(SysmelCompiler SHARED ${Parser_Sources} ${BootstrapEnvironment_Sources})
