set(Environment_Sources
    AggregateElementReference.cpp
    AggregateType.cpp
    AggregateTypeArrayLayout.cpp
    AggregateTypeLayout.cpp
    AggregateTypeSequentialLayout.cpp
    AggregateTypeUnionLayout.cpp
    AggregateTypeVariantLayout.cpp
    AggregateTypeWithFields.cpp
    AmbiguousMatchingPatternsFound.cpp
    AnyValue.cpp
    ArgumentCountError.cpp
    ArgumentVariable.cpp
    ArithmeticError.cpp
    ArrayType.cpp
    Assert.cpp
    ASTAnalysisEnvironment.cpp
    ASTArgumentDefinitionNode.cpp
    ASTBreakNode.cpp
    ASTBuilder.cpp
    ASTCallNode.cpp
    ASTCastNode.cpp
    ASTClassNode.cpp
    ASTCleanUpScopeNode.cpp
    ASTClosureNode.cpp
    ASTCompileTimeConstantNode.cpp
    ASTCompileTimeEvaluationErrorNode.cpp
    ASTCompileTimeEvaluator.cpp
    ASTContinueNode.cpp
    ASTDoWhileNode.cpp
    ASTDowncastTypeConversionNode.cpp
    ASTEmptySourcePosition.cpp
    ASTEnumNode.cpp
    ASTErrorNode.cpp
    ASTExplicitCastNode.cpp
    ASTFieldVariableAccessNode.cpp
    ASTFieldVariableNode.cpp
    ASTFunctionalNode.cpp
    ASTFunctionNode.cpp
    ASTGlobalVariableNode.cpp
    ASTIdentifierReferenceNode.cpp
    ASTIfNode.cpp
    ASTImplicitCastNode.cpp
    ASTLexicalScopeNode.cpp
    ASTLiteralValueNode.cpp
    ASTLocalImmutableAccessNode.cpp
    ASTLocalVariableNode.cpp
    ASTMakeAssociationNode.cpp
    ASTMakeDictionaryNode.cpp
    ASTMakeLiteralArrayNode.cpp
    ASTMakeTupleNode.cpp
    ASTMessageChainMessageNode.cpp
    ASTMessageChainNode.cpp
    ASTMessageSendNode.cpp
    ASTMethodNode.cpp
    ASTNamespace.cpp
    ASTNode.cpp
    ASTParseErrorNode.cpp
    ASTParseErrorValidator.cpp
    ASTPragmaNode.cpp
    ASTProgramEntityExtensionNode.cpp
    ASTProgramEntityNode.cpp
    ASTQuasiQuoteAnalyzer.cpp
    ASTQuasiQuoteExpander.cpp
    ASTQuasiQuoteNode.cpp
    ASTQuasiUnquoteNode.cpp
    ASTQuoteNode.cpp
    ASTQuasiQuotePatternExpansionNode.cpp
    ASTQuasiQuotePatternExpansionArgumentNode.cpp
    ASTReinterpretCastNode.cpp
    ASTReturnNode.cpp
    ASTSemanticAnalyzer.cpp
    ASTSemanticErrorNode.cpp
    ASTSequenceNode.cpp
    ASTSourceCode.cpp
    ASTSourceCodePosition.cpp
    ASTSourcePosition.cpp
    ASTSpliceNode.cpp
    ASTSSACompiler.cpp
    ASTStructNode.cpp
    ASTTemplateNode.cpp
    ASTTransformVisitor.cpp
    ASTTypeConversionNode.cpp
    ASTTypeNode.cpp
    ASTUnionNode.cpp
    ASTUpcastTypeConversionNode.cpp
    ASTValueAsReferenceReinterpretConversionNode.cpp
    ASTValueAsVoidTypeConversionNode.cpp
    ASTVariableAccessNode.cpp
    ASTVariableNode.cpp
    ASTVisitor.cpp
    ASTWhileNode.cpp
    Auto.cpp
    AutoTypeInferenceSlot.cpp
    BootstrapExtensionMethods.cpp
    BootstrapFieldVariable.cpp
    BootstrapMethod.cpp
    BootstrapModule.cpp
    BootstrapType.cpp
    BootstrapTypeRegistration.cpp
    BreakType.cpp
    CannotEvaluateMessage.cpp
    CannotEvaluateMessageInCompileTime.cpp
    CannotEvaluateUndefinedMessage.cpp
    CannotOverloadPatternMatchingMethod.cpp
    CannotUnwrap.cpp
    ClassMetaBuilder.cpp
    ClassType.cpp
    CleanUpScope.cpp
    ClosureType.cpp
    CompilationError.cpp
    CompilationErrors.cpp
    CompilationErrorValue.cpp
    CompiledMethod.cpp
    CompileTimeCleanUpScope.cpp
    CompileTimeConstant.cpp
    CompileTimeConstantMetaBuilder.cpp
    CompileTimeEvaluationError.cpp
    CompileTimeMetaBuilder.cpp
    ConstructorMethodTypeConversionRule.cpp
    ContinueType.cpp
    ControlFlowEscapeType.cpp
    ConversionMethodTypeConversionRule.cpp
    CVarArg.cpp
    DecoratedType.cpp
    DeferredCompileTimeCodeFragment.cpp
    DerivedType.cpp
    CompilerObject.cpp
    DivisionByZeroError.cpp
    DomainError.cpp
    DowncastTypeConversionRule.cpp
    EnumConstant.cpp
    EnumMetaBuilder.cpp
    EnumRawValueLookupScope.cpp
    EnumType.cpp
    Error.cpp
    Exception.cpp
    ExpectedTypeSetInferenceSlot.cpp
    FieldMetaBuilder.cpp
    FieldVariable.cpp
    Fraction.cpp
    FunctionType.cpp
    FunctionVariable.cpp
    FunctionalType.cpp
    FunctionMetaBuilder.cpp
    GlobalMetaBuilder.cpp
    GlobalVariable.cpp
    IdentifierLookupScope.cpp
    IdentityTypeConversionRule.cpp
    InternalMetaBuilder.cpp
    ItaniumNameMangler.cpp
    LanguageSupport.cpp
    LargeInteger.cpp
    LexicalScope.cpp
    LetMetaBuilder.cpp
    LiteralArray.cpp
    LiteralAssociation.cpp
    LiteralBoolean.cpp
    LiteralBooleanTrue.cpp
    LiteralBooleanFalse.cpp
    LiteralInteger.cpp
    LiteralNegativeInteger.cpp
    LiteralNumber.cpp
    LiteralFloat.cpp
    LiteralFraction.cpp
    LiteralPositiveInteger.cpp
    LiteralCharacter.cpp
    LiteralDictionary.cpp
    LiteralString.cpp
    LiteralSymbol.cpp
    LiteralToTargetTypeConversionRule.cpp
    LiteralValue.cpp
    LiteralValueVisitor.cpp
    LocalVariable.cpp
    MacroInvocationContext.cpp
    MessageChainReceiverName.cpp
    MessageNotUnderstood.cpp
    MetaBuilder.cpp
    MetaBuilderInstanceContext.cpp
    MetaType.cpp
    Method.cpp
    MethodType.cpp
    MethodDictionary.cpp
    MethodFlags.cpp
    MethodMetaBuilder.cpp
    Module.cpp
    ModuleDefinedProgramEntity.cpp
    ModuleReference.cpp
    NamedProgramEntityMetaBuilder.cpp
    NameMangler.cpp
    Namespace.cpp
    NamespaceMetaBuilder.cpp
    NotMatchingPatternFound.cpp
    ParseError.cpp
    PatternMatchingMethod.cpp
    PointerLikeType.cpp
    PointerType.cpp
    Pragma.cpp
    PrimitiveBooleanType.cpp
    PrimitiveCharacterType.cpp
    PrimitiveFloatType.cpp
    PrimitiveIntegerType.cpp
    PrimitiveNumberType.cpp
    PrimitiveScalarType.cpp
    PrimitiveTensorType.cpp
    PrimitiveType.cpp
    PrivateMetaBuilder.cpp
    ProgramEntity.cpp
    ProgramEntityScope.cpp
    ProgramModule.cpp
    ProtectedMetaBuilder.cpp
    PublicMetaBuilder.cpp
    ReceiverMemberLookupScope.cpp
    RefCountedObject.cpp
    ReferenceType.cpp
    ResultTypeInferenceSlot.cpp
    ReturnType.cpp
    RuntimeContext.cpp
    RuntimeContextTargetDescription.cpp
    ScriptModule.cpp
    SemanticError.cpp
    SExpression.cpp
    SimpleType.cpp
    SpecificMethod.cpp
    SSABasicBlock.cpp
    SSABitcastInstruction.cpp
    SSABreakInstruction.cpp
    SSABuilder.cpp
    SSACallInstruction.cpp
    SSACastInstruction.cpp
    SSACodeGenerationBackend.cpp
    SSACodeRegion.cpp
    SSACodeRegionArgument.cpp
    SSACodeRegionCapture.cpp
    SSACodeRegionLocalValue.cpp
    SSAConditionalJumpInstruction.cpp
    SSAContinueInstruction.cpp
    SSAConstantLiteralValue.cpp
    SSAConstantValue.cpp
    SSADoWhileInstruction.cpp
    SSADoWithCleanupInstruction.cpp
    SSADowncastInstruction.cpp
    SSAEnableLocalFinalization.cpp
    SSAFunction.cpp
    SSAGlobalValue.cpp
    SSAGlobalVariable.cpp
    SSAIfInstruction.cpp
    SSAInstruction.cpp
    SSAJumpInstruction.cpp
    SSALoadInstruction.cpp
    SSALocalFinalization.cpp
    SSALocalVariableInstruction.cpp
    SSAGetAggregateFieldReferenceInstruction.cpp
    SSAGetAggregateSlotReferenceInstruction.cpp
    SSAMakeClosureInstruction.cpp
    SSAModule.cpp
    SSANamespace.cpp
    SSAProgramEntity.cpp
    SSAProgramEntityWithChildren.cpp
    SSAReturnFromFunctionInstruction.cpp
    SSAReturnFromRegionInstruction.cpp
    SSASendMessageInstruction.cpp
    SSAStoreInstruction.cpp
    SSATemplate.cpp
    SSATemplateInstance.cpp
    SSATypeProgramEntity.cpp
    SSAUnreachableInstruction.cpp
    SSAUpcastInstruction.cpp
    SSAValue.cpp
    SSAValueVisitor.cpp
    SSAWhileInstruction.cpp
    StringUtilities.cpp
    StructMetaBuilder.cpp
    StructureType.cpp
    SubclassResponsibility.cpp
    Template.cpp
    TemplateInstance.cpp
    TemplateMetaBuilder.cpp
    TemporaryReferenceType.cpp
    TupleType.cpp
    Type.cpp
    TypeVisitor.cpp
    TypeConversionRule.cpp
    TypeMetaBuilder.cpp
    Undefined.cpp
    UnsupportedOperation.cpp
    UpcastTypeConversionRule.cpp
    UnionMetaBuilder.cpp
    UnionType.cpp
    ValueBox.cpp
    ValueAsReceiverReferenceTypeConversionRule.cpp
    ValueAsVoidTypeConversionRule.cpp
    Variable.cpp
    VariantType.cpp
    VariableMetaBuilder.cpp
    VisibilityMetaBuilder.cpp
    Void.cpp
    Wrappers.cpp
)

list(TRANSFORM Environment_Sources PREPEND "Environment/")

set(SysmelSyntax_Sources
    Scanner.cpp
    Parser.cpp
    SysmelLanguageSupport.cpp
)

list(TRANSFORM SysmelSyntax_Sources PREPEND "Frontend/SysmelSyntax/")

set(LLVMBackend_Sources
    LLVMDebugTypeVisitor.cpp
    LLVMLiteralValueVisitor.cpp
    LLVMTypeVisitor.cpp
    SSALLVMCodeGenerationBackend.cpp
    SSALLVMModuleVisitor.cpp
    SSALLVMValueVisitor.cpp
)

list(TRANSFORM LLVMBackend_Sources PREPEND "Backend/LLVM/")

if(NOT HAVE_LLVM_BACKEND)
    set(LLVMBackend_Sources)
endif()

add_library(SysmelCompiler SHARED ${SysmelSyntax_Sources} ${Environment_Sources} ${LLVMBackend_Sources})
target_link_libraries(SysmelCompiler ${USED_LLVM_LIBS})
